fix-accent-page-error

--- a/public/404.html
+++ b/public/404.html
@@ -58,10 +58,10 @@
   <!-- This file lives in public/404.html -->
   <div class="dialog">
     <div>
-      <h1>La page que vous cherchiez n'existe pas 😢</h1>
-      <p>Il est possible que vous ayez mal saisi l'adresse ou que la page ait été déplacée.</p>
+      <h1>La page que vous cherchiez n'existe pas :(</h1>
+      <p>Il est possible que vous ayez mal saisi l'adresse.</p>
     </div>
-    <p>Si vous êtes le propriétaire de l'application, consultez les logs pour plus d'informations.</p>
+    <p>Si vous etes le possesseur  de l'application, consultez les logs pour plus d'informations.</p>
   </div>
 </body>
 </html>
