peaufinage erreur 404 et 500

--- a/public/404.html
+++ b/public/404.html
@@ -58,7 +58,8 @@
   <!-- This file lives in public/404.html -->
   <div class="dialog">
     <div>
-      <h1>La page que vous cherchiez n'existe pas :(</h1>
+      <h1>Erreur 404</h1>
+      <h1>Ooops! La page que vous cherchiez n'existe pas :( </h1>
       <p>Il est possible que vous ayez mal saisi l'adresse.</p>
     </div>
     <p>Si vous etes le possesseur  de l'application, consultez les logs pour plus d'informations.</p>
