--- a/public/500.html
+++ b/public/500.html
@@ -58,7 +58,8 @@
   <!-- This file lives in public/500.html -->
   <div class="dialog">
     <div>
-      <h1>Nous sommes  triste, quelque chose c'est mal passez :(</h1>
+      <h1>Erreur 500</h1>
+      <h1>Nous sommes  triste, quelque chose c'est mal passez :( </h1>
     </div>
     <p>Si vous etes le possesseur de l'application, consultez les logs pour plus d'informations.</p>
   </div>
