--- a/public/500.html
+++ b/public/500.html
@@ -60,6 +60,7 @@
     <div>
       <h1>Erreur 500</h1>
       <h1>Nous sommes  triste, quelque chose c'est mal passez :( </h1>
+      <a href="https://www.urgences-enfant.com">Clique ici pour revenir sur la page d'accueil</a>
     </div>
     <p>Si vous etes le possesseur de l'application, consultez les logs pour plus d'informations.</p>
   </div>
