--- a/public/404.html
+++ b/public/404.html
@@ -51,6 +51,10 @@
     color: #666;
     box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
   }
+  a{
+    text-decoration: none;
+    color:black;
+  }
   </style>
 </head>
 
@@ -61,6 +65,7 @@
       <h1>Erreur 404</h1>
       <h1>Ooops! La page que vous cherchiez n'existe pas :( </h1>
       <p>Il est possible que vous ayez mal saisi l'adresse.</p>
+      <a href="https://www.urgences-enfant.com">Clique ici pour revenir sur la page d'accueil</a>
     </div>
     <p>Si vous etes le possesseur  de l'application, consultez les logs pour plus d'informations.</p>
   </div>
