--- a/public/500.html
+++ b/public/500.html
@@ -1,68 +1,78 @@
 <!DOCTYPE html>
 <html>
-<head>
-  <title>Nous sommes désolés, mais quelque chose a mal tourné (500)</title>
-  <meta name="viewport" content="width=device-width,initial-scale=1">
-  <style>
-  .rails-default-error-page {
-    background-color: #EFEFEF;
-    color: #2E2F30;
+  <head>
+    <title>La page que vous cherchiez n'existe pas (404)</title>
+    <meta content="text/html; charset=UTF-8" http-equiv="Content-Type">
+    <meta name="viewport" content="width=device-width,initial-scale=1">
+    <link href="https://fonts.googleapis.com/css2?family=Nunito+Sans:wght@600;900&display=swap" rel="stylesheet">
+    <script src="https://kit.fontawesome.com/4b9ba14b0f.js" crossorigin="anonymous"></script>
+    <style>
+      body {
+  background-color: #66BBEC;
+}
+
+.mainbox {
+  background-color: #66BBEC;
+  margin: auto;
+  width: 600px;
+  height: 600px;
+  position: relative;
+  color:white;
+}
+
+  .err {
+    color: #ffffff;
+    font-family: 'Nunito Sans', sans-serif;
+    font-size: 11rem;
+    position:absolute;
+    left: 20%;
+    top: 8%;
+  }
+
+.far {
+  position: absolute;
+  font-size: 8.5rem;
+  left: 42%;
+  top: 15%;
+  color: #ffffff;
+}
+
+ .err2 {
+    color: #ffffff;
+    font-family: 'Nunito Sans', sans-serif;
+    font-size: 11rem;
+    position:absolute;
+    left: 68%;
+    top: 8%;
+  }
+
+.msg {
     text-align: center;
-    font-family: arial, sans-serif;
-    margin: 0;
+    font-family: 'Nunito Sans', sans-serif;
+    font-size: 1.6rem;
+    position:absolute;
+    left: 16%;
+    top: 45%;
+    width: 75%;
   }
 
-  .rails-default-error-page div.dialog {
-    width: 95%;
-    max-width: 33em;
-    margin: 4em auto 0;
-  }
+a {
+  text-decoration: underline;
+  color: white;
+}
 
-  .rails-default-error-page div.dialog > div {
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #BBB;
-    border-top: #66BBEC solid 4px;
-    border-top-left-radius: 9px;
-    border-top-right-radius: 9px;
-    background-color: white;
-    padding: 7px 12% 0;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
-  }
-
-  .rails-default-error-page h1 {
-    font-size: 100%;
-    color: #2E2F30;
-    line-height: 1.5em;
-  }
-
-  .rails-default-error-page div.dialog > p {
-    margin: 0 0 1em;
-    padding: 1em;
-    background-color: #F7F7F7;
-    border: 1px solid #CCC;
-    border-right-color: #999;
-    border-left-color: #999;
-    border-bottom-color: #999;
-    border-bottom-left-radius: 4px;
-    border-bottom-right-radius: 4px;
-    border-top-color: #DADADA;
-    color: #666;
-    box-shadow: 0 3px 8px rgba(50, 50, 50, 0.17);
-  }
-  </style>
-</head>
-
-<body class="rails-default-error-page">
-  <!-- This file lives in public/500.html -->
-  <div class="dialog">
-    <div>
-      <h1>Erreur 500</h1>
-      <h1>Nous sommes  triste, quelque chose c'est mal passez :( </h1>
-      <a href="https://www.urgences-enfant.com">Clique ici pour revenir sur la page d'accueil</a>
+a:hover {
+  text-decoration: none;
+}
+    </style>
+  </head>
+  <body class="rails-default-error-page">
+    <!-- This file lives in public/404.html -->
+    <div class="mainbox">
+      <div class="err">5</div>
+      <i class="far fa-question-circle fa-spin"></i>
+      <div class="err2">0</div>
+      <div class="msg">Cette page a peut-être été déplacée ? A été supprimée ? N'a jamais existé ?<p>Retourne à <a href="https://www.urgences-enfant.com/">l'accueil</a> et réessaye à partir d'ici.</p></div>
     </div>
-    <p>Si vous etes le possesseur de l'application, consultez les logs pour plus d'informations.</p>
-  </div>
-</body>
+  </body>
 </html>
