--- a/public/500.html
+++ b/public/500.html
@@ -66,7 +66,7 @@ a:hover {
 }
     </style>
   </head>
-  <body class="rails-default-error-page">
+  <body>
     <!-- This file lives in public/404.html -->
     <div class="mainbox">
       <div class="err">5</div>
